Able to link up with the gui, next step is to implement proper rendering code

--- a/modules/rust/Cargo.toml
+++ b/modules/rust/Cargo.toml
@@ -10,6 +10,9 @@ edition = "2018"
 name = "fractal"
 crate-type = ["cdylib"]
 
+[dependencies.rand]
+version = "*"
+
 [dependencies.pyo3]
 version = "0.8.4"
 features = ["extension-module"]
